preparing to deploy

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ _SpecRunner.html
 __benchmarks__
 remote-repo/
 coverage/
+/build
 .module-cache
 fixtures/dom/public/react-dom.js
 fixtures/dom/public/react.js
